--- a/Polyclinic/Polyclinic.Test/Polyclinic.Test.csproj
+++ b/Polyclinic/Polyclinic.Test/Polyclinic.Test.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Polyclinic.Domain\Polyclinic.Domain.csproj" />
+    <ProjectReference Include="..\Polyclinic.Domain\Polyclinic.Model.csproj" />
   </ItemGroup>
 
 </Project>
