created controller,class for connection of Houses and Applications; created analyticsController

--- a/RealtorServer/RealtorServer.csproj
+++ b/RealtorServer/RealtorServer.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <UserSecretsId>4b735e6c-799a-4cad-93d6-79ef449f4cec</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
