--- a/HotelBookingSystem/HotelBookingSystem.Server/HotelBookingSystem.Server.csproj
+++ b/HotelBookingSystem/HotelBookingSystem.Server/HotelBookingSystem.Server.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HotelBookingSystem.Classes\HotelBookingSystem.Classes.csproj" />
+    <ProjectReference Include="..\HotelBookingSystem.Model\HotelBookingSystem.Model.csproj" />
   </ItemGroup>
 
 </Project>
