--- a/HotelBookingSystem/HotelBookingSystem.Tests/HotelBookingSystem.Tests.csproj
+++ b/HotelBookingSystem/HotelBookingSystem.Tests/HotelBookingSystem.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -21,6 +21,6 @@
     </PackageReference>
   </ItemGroup>
 	<ItemGroup>
-		<ProjectReference Include="..\HotelBookingSystem.Classes\HotelBookingSystem.Classes.csproj" />
+		<ProjectReference Include="..\HotelBookingSystem.Model\HotelBookingSystem.Model.csproj" />
 	</ItemGroup>
 </Project>
