--- a/Department/Department.Client/Department.Client.csproj
+++ b/Department/Department.Client/Department.Client.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <OpenApiReference Include="swagger.json" CodeGenerator="NSwagCSharp" Namespace="Department.Client" ClassName="ApiClient" />
+    <OpenApiReference Include="swagger.json" ClassName="ApiClient" CodeGenerator="NSwagCSharp" Namespace="Department.Client" />
   </ItemGroup>
 
   <ItemGroup>
