Реализовано отображение, редактирование и удаление информации в счет-фактуре на стороне клиента. Добавлена иконка. Создан новый контроллер и dto классы для InvoiceContent

--- a/EnterpriseWarehouse/EnterpriseWarehouseClient/EnterpriseWarehouseClient.csproj
+++ b/EnterpriseWarehouse/EnterpriseWarehouseClient/EnterpriseWarehouseClient.csproj
@@ -18,6 +18,7 @@
     <None Remove="Assets\edit-icon.png" />
     <None Remove="Assets\edit-product-icon.png" />
     <None Remove="Assets\enterprise-icon.png" />
+    <None Remove="Assets\invoice-content-icon.png" />
     <None Remove="Assets\invoice-icon.png" />
     <None Remove="Assets\products-icon.png" />
     <None Remove="Assets\storage-cell-icon.png" />
