Переименованы физические папки с проектами

--- a/EnterpriseWarehouse/EnterpriseWarehouse.Tests/EnterpriseWarehouse.Tests.csproj
+++ b/EnterpriseWarehouse/EnterpriseWarehouse.Tests/EnterpriseWarehouse.Tests.csproj
@@ -22,7 +22,8 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\EnterpriseData\Enterprise.Data.csproj" />
+		<ProjectReference Include="..\EnterpriseData\Enterprise.Model.csproj" />
+		<ProjectReference Include="..\EnterpriseWarehouse.Model\EnterpriseWarehouse.Model.csproj" />
 	</ItemGroup>
 
 </Project>
