--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,22 @@ jobs:
         dotnet-version: 6.0.x
     - name: Install dependencies
       run: |
+        dotnet add Policlinic\PoliclinicClient package AutoMapper --version 12.0.1
         dotnet add Policlinic\PoliclinicServer package AutoMapper --version 12.0.1
+        dotnet add Policlinic\PoliclinicClient package Avalonia --version 0.10.18
+        dotnet add Policlinic\PoliclinicClient package Avalonia.Desktop --version 0.10.18
+        dotnet add Policlinic\PoliclinicClient package Avalonia.Controls.DataGrid --version 0.10.18
+        dotnet add Policlinic\PoliclinicClient package Avalonia.Diagnostics --version 0.10.18
+        dotnet add Policlinic\PoliclinicClient package Avalonia.ReactiveUI --version 0.10.18
+        dotnet add Policlinic\PoliclinicClient Microsoft.Extensions.ApiDescription.Client --version 3.0.0
+        dotnet add Policlinic\PoliclinicClient package Microsoft.Extensions.Configuration --version 7.0.0
+        dotnet add Policlinic\PoliclinicClient package Microsoft.Extensions.Configuration.Abstractions --version 7.0.0
+        dotnet add Policlinic\PoliclinicClient package Microsoft.Extensions.Configuration.FileExtensions --version 7.0.0
+        dotnet add Policlinic\PoliclinicClient package Microsoft.Extensions.Configuration.Json --version 7.0.0
+        dotnet add Policlinic\PoliclinicClient package Microsoft.Extensions.Configuration.UserSecrets --version 7.0.0
+        dotnet add Policlinic\PoliclinicClient package Newtonsoft.Json --version 13.0.1
+        dotnet add Policlinic\PoliclinicClient package NSwag.ApiDescription.Client --version 13.0.5
+        dotnet add Policlinic\PoliclinicClient package XamlNameReferenceGenerator --version 1.5.1
         dotnet add Policlinic\PoliclinicServer package Microsoft.EntityFrameworkCore.Tools --version 6.0.15
         dotnet add Policlinic\PoliclinicServer package AutoMapper.Extensions.Microsoft.DependencyInjection --version 12.0.1
         dotnet add Policlinic\PoliclinicServer package Swashbuckle.AspNetCore --version 6.2.3
@@ -26,6 +41,8 @@ jobs:
         dotnet add Policlinic\PoliclinicServer package Microsoft.VisualStudio.Web.CodeGeneration.Design --version 6.0.13
         dotnet add Policlinic\Policlinic package MySql.EntityFrameworkCore --version 7.0.2
     - name: Build with dotnet
-      run: dotnet build Policlinic\PoliclinicServer
+      run: |
+        dotnet build Policlinic\PoliclinicServer
+        dotnet build Policlinic\PoliclinicClient
     - name: Test with dotnet
       run: dotnet test Policlinic
