--- a/LibrarySchool.Client/LibrarySchool.Client.csproj
+++ b/LibrarySchool.Client/LibrarySchool.Client.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <OpenApiReference Include="swagger.json" CodeGenerator="NSwagCSharp" ClassName="LibrarySchoolClient" />
+    <OpenApiReference Include="swagger.json" ClassName="LibrarySchoolClient" CodeGenerator="NSwagCSharp" />
   </ItemGroup>
 
   <ItemGroup>
