Revert "Convert ClassDto to Record"
This reverts commit 43e1f6cb551f9d5886faf284e80b8e25b8ae11ba.

--- a/LibrarySchool.Client/LibrarySchool.Client.csproj
+++ b/LibrarySchool.Client/LibrarySchool.Client.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <OpenApiReference Include="swagger.json" ClassName="LibrarySchoolClient" CodeGenerator="NSwagCSharp" />
+    <OpenApiReference Include="swagger.json" CodeGenerator="NSwagCSharp" ClassName="LibrarySchoolClient" />
   </ItemGroup>
 
   <ItemGroup>
