Added middleware exception

--- a/LibrarySchool.Server/appsettings.json
+++ b/LibrarySchool.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "LibrarySchool": "Server=localhost;Database=libraryschool;Uid=root;Pwd=hungvip2000;"
+  }
 }
