--- a/.github/workflows/TestLibrarySchool.yml
+++ b/.github/workflows/TestLibrarySchool.yml
@@ -3,7 +3,8 @@ name: .NET application unit testing
 on:
   pull_request:
     branches: [ "main" ]
-
+  push:
+    branches: [ "main" ]
 jobs:
 
   build:
