Fixed file docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,9 +15,16 @@ services:
       - database
     volumes:
       - ./temp:/app/temp  # Mount the local certs folder into the container
+    restart: on-failure
   database:
     image: mysql:latest
     container_name: my-sql-container
     environment:
       - MYSQL_ROOT_PASSWORD=hungvip2000
       - MYSQL_DATABASE=libraryschool
+    volumes:
+      - my-datavolume:/var/lib/mysql
+    ports:
+      - 3307:3306
+volumes:
+  my-datavolume:
